	* Made -fnative-types a default option; removed cmdline option.
	  Added -fwide-types for backwards compatibility.
    * Add -fline-refs to avoid being unfriendly to version control systems.
    * Default constraint checking fix.
      Thanks to Bartosz Marcinkiewicz <bma@megawatt.com.pl>
    * Get rid of non-standard pointer arithmetics on void* pointer.

0.9.24:	2013-Mar-16

	* GeneralizedTime fix for working with time offsets which are not
	  representable in whole hours. (Severity: low; Security impact: low)
	  Thanks to IP Fabrics, Inc.
	* Added -fincludes-quoted to asn1c to generate #includes in "double"
	  instead of <angle> quotes.
	* PER encoding correctness fix. (Severity: high; Security impact: low)
	  Reported by Grzegorz Aksamit.
	* ENUMERATED extension values check relaxed. Reported by Gabriel Burca.
	* Fixed decimal decoding of REAL values in -fnative-types mode
	  (Severity: medium; Security impact: medium)
	* Removed webcgi subproject (introduced in 2004) as useless.

0.9.22:	2008-Nov-19

	* Added -pdu=all and -pdu=<type> switches to asn1c.
	* Added PER support for most known-multiplier string types:
	  IA5String, VisibleString, PrintableString, BMPString, UniversalString;
	  useful types: GeneralizedTime, UTCTime, ObjectDescriptor;
	  as well as REAL and OBJECT IDENTIFIER.
	  TODO: SET type.
	* Added PER support for extensions in SEQUENCE.
	* Multiple enhancements by Daniele Varrazzo <daniele.varrazzo@gmail.com>
	* Fixed explicit tagging of an in-lined constructed type.
	  (Severity: low; Security impact: none).
	* Memory leak fixed in SET OF / SEQUENCE OF when wrong encoding
	  is encountered. (Severity: medium; Security impact: low)
	* Fixed extensibility handling of second SEQUENCE production.
	  (Severity: low; Security impact: none)
	* Added DEFAULT handling for known multiplier string.
	* Added a sample OMA ULP decoder (./examples/sample.source.ULP).
	* Added full-width 32-bit integer encoding support in PER.