@@ -1,5 +1,6 @@
 
 -- OK: Everything is fine
+-- Also see .134 for wider integer types.
 
 -- iso.org.dod.internet.private.enterprise (1.3.6.1.4.1)
 -- .spelio.software.asn1c.test (9363.1.5.1)
@@ -12,6 +13,7 @@ ModulePERLong
 BEGIN
 
 	T ::= SEQUENCE {
+		-- Should be supported on all 32-bit platforms and above.
 		small32range	INTEGER (-2000000000..2000000000),
 		full32range	INTEGER (-2147483648..2147483647),
 		unsigned32	INTEGER (0..4294967295),
